tdf#158661 docx import plaintext sdt: remove unnecessary goRight

This fixes a 24.2 regression
from commit 5082d50d24c3fec4487c724a15eb0d54a82ecd0d
   writerfilter: use content controls for text in block SDTs

which was made even worse
with 24.2 commit 7c4dba1deffd81f647a4a3be7a79f68f3bf9f1ba.

Initially, the starting mark was made as soon as SdtContent was seen.
After that, you could get a w:tbl, or a w:tc which could trigger
the start of a table, and potentially add a dummy paragraph
which needed to be jumped over (at least for the first SDT,
but not for subsequent SDTs).

In the second patch, the starting mark was made just before
the text was appended, so all of the cell/table creation
has already been completed, so there is no more need to
jump over any dummy paragraphs, even for the first table.

Affected unit tests were
- table-start-2-sdt.docx
- sdt-company-multipara.docx
- paragraph-sdt.docx

make CppunitTest_sw_ooxmlfieldexport CPPUNIT_TEST_NAME=testParagraphSdt
make CppunitTest_sw_ooxmlfieldexport \
    CPPUNIT_TEST_NAME=testTdf158661_blockSDT

Change-Id: I4a8359cec27f88f6a2fc0464aa240b523a279e42
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170920
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>